--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <guava.version>20.0</guava.version>
+        <guava.version>30.1-jre</guava.version>
         <servlet.version>3.1.0</servlet.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <junit.version>4.13.1</junit.version>
